--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.url=jdbc:tc:oracle:thin:@localhost:1521:xe?TC_INITSCRIPT=schem
 spring.jpa.hibernate.ddl-auto=none
 
 #logging
-logging.level.org.springframework.jdbc.core=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
